sandbox/output
OneHundredDoors.java:43: error: cannot find symbol
        toogleDoor(amountOfDoorsPassed);
        ^
  symbol:   method toogleDoor(int)
  location: class OneHundredDoors
OneHundredDoors.java:44: error: cannot find symbol
        return convertDoorListToIdsOfOpenedDoors();
               ^
  symbol:   method convertDoorListToIdsOfOpenedDoors()
  location: class OneHundredDoors
2 errors
